--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
       "react-hooks/exhaustive-deps": "warn",
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
+      "no-unused-expressions":"off",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
       "import/prefer-default-export": "off",
       "import/extensions": [
