Dashboard search for providers in API

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,9 @@
       "react-hooks/exhaustive-deps": "warn",
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
-      "no-unused-expressions":"off",
+      "no-unused-expressions": "off",
+      "camelcase": "off",
+      "react/jsx-one-expression-per-line": "off",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
       "import/prefer-default-export": "off",
       "import/extensions": [
